--- a/pepperfry-product-service.yml
+++ b/pepperfry-product-service.yml
@@ -1,7 +1,7 @@
 spring:
   datasource: 
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///spring_db
+    url: jdbc:mysql://localhost:3306/spring_db
     username: root
     password: root
   jpa:
